Kaggle Notebook | Loan Prediction | Version 4

--- a/DABN22_Project.ipynb
+++ b/DABN22_Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4fdc91ad",
+   "id": "33ccfd5d",
    "metadata": {
     "_cell_guid": "651a51f0-7077-4683-a8f7-f128d941d569",
     "_uuid": "8e5ca86b-0df5-4a7e-8961-4425cb483da8",
@@ -11,10 +11,10 @@
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.005826,
-     "end_time": "2024-11-23T20:39:30.749083",
+     "duration": 0.005645,
+     "end_time": "2024-11-23T20:41:12.527439",
      "exception": false,
-     "start_time": "2024-11-23T20:39:30.743257",
+     "start_time": "2024-11-23T20:41:12.521794",
      "status": "completed"
     },
     "tags": []
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "752ffa63",
+   "id": "85547db9",
    "metadata": {
     "_cell_guid": "109894fd-d3cc-4678-9a4a-6a2c6ebdd261",
     "_uuid": "3291786c-a552-43ae-a95f-b092648f5755",
@@ -46,10 +46,10 @@
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.004154,
-     "end_time": "2024-11-23T20:39:30.757961",
+     "duration": 0.003811,
+     "end_time": "2024-11-23T20:41:12.535646",
      "exception": false,
-     "start_time": "2024-11-23T20:39:30.753807",
+     "start_time": "2024-11-23T20:41:12.531835",
      "status": "completed"
     },
     "tags": []
@@ -67,25 +67,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "eb9860a6",
+   "id": "c333784e",
    "metadata": {
     "_cell_guid": "53a5301d-ae2a-4369-b9bf-4f598341b689",
     "_uuid": "27e21fee-18ff-4575-adc4-c981a1cb2254",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-11-23T20:39:30.767900Z",
-     "iopub.status.busy": "2024-11-23T20:39:30.767399Z",
-     "iopub.status.idle": "2024-11-23T20:39:34.102240Z",
-     "shell.execute_reply": "2024-11-23T20:39:34.100964Z"
+     "iopub.execute_input": "2024-11-23T20:41:12.545876Z",
+     "iopub.status.busy": "2024-11-23T20:41:12.545089Z",
+     "iopub.status.idle": "2024-11-23T20:41:15.633490Z",
+     "shell.execute_reply": "2024-11-23T20:41:15.632694Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 3.342882,
-     "end_time": "2024-11-23T20:39:34.104837",
+     "duration": 3.096125,
+     "end_time": "2024-11-23T20:41:15.635795",
      "exception": false,
-     "start_time": "2024-11-23T20:39:30.761955",
+     "start_time": "2024-11-23T20:41:12.539670",
      "status": "completed"
     },
     "tags": []
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37d8dbf1",
+   "id": "118fa856",
    "metadata": {
     "_cell_guid": "0fcf96f3-5ab9-4bd4-bed1-d6c57b2eb6aa",
     "_uuid": "6babb466-0d94-4fdd-a28a-ebebd05556fb",
@@ -122,10 +122,10 @@
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.003818,
-     "end_time": "2024-11-23T20:39:34.112951",
+     "duration": 0.003734,
+     "end_time": "2024-11-23T20:41:15.643758",
      "exception": false,
-     "start_time": "2024-11-23T20:39:34.109133",
+     "start_time": "2024-11-23T20:41:15.640024",
      "status": "completed"
     },
     "tags": []
@@ -137,25 +137,25 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d747b52f",
+   "id": "c6df8ee8",
    "metadata": {
     "_cell_guid": "d9016b45-6f10-44cc-8737-99366654370c",
     "_uuid": "a990af83-fdc0-46fc-9dc3-8389d4c89926",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-11-23T20:39:34.122693Z",
-     "iopub.status.busy": "2024-11-23T20:39:34.122117Z",
-     "iopub.status.idle": "2024-11-23T20:39:34.203593Z",
-     "shell.execute_reply": "2024-11-23T20:39:34.202531Z"
+     "iopub.execute_input": "2024-11-23T20:41:15.653118Z",
+     "iopub.status.busy": "2024-11-23T20:41:15.652654Z",
+     "iopub.status.idle": "2024-11-23T20:41:15.723340Z",
+     "shell.execute_reply": "2024-11-23T20:41:15.722440Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.088957,
-     "end_time": "2024-11-23T20:39:34.205881",
+     "duration": 0.077564,
+     "end_time": "2024-11-23T20:41:15.725305",
      "exception": false,
-     "start_time": "2024-11-23T20:39:34.116924",
+     "start_time": "2024-11-23T20:41:15.647741",
      "status": "completed"
     },
     "tags": []
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfd91038",
+   "id": "fc957cd0",
    "metadata": {
     "_cell_guid": "7742387d-dd9d-441a-a7e6-b06be2a2883d",
     "_uuid": "6696caa1-f1a3-4981-88ec-48edcc01d451",
@@ -326,10 +326,10 @@
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.004593,
-     "end_time": "2024-11-23T20:39:34.215503",
+     "duration": 0.004251,
+     "end_time": "2024-11-23T20:41:15.734392",
      "exception": false,
-     "start_time": "2024-11-23T20:39:34.210910",
+     "start_time": "2024-11-23T20:41:15.730141",
      "status": "completed"
     },
     "tags": []
@@ -385,25 +385,25 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "beb1f62e",
+   "id": "ad948936",
    "metadata": {
     "_cell_guid": "8a24528c-749b-4a68-a350-581ef75a624c",
     "_uuid": "2f7d46f2-83ec-4f10-a780-7acb80699cc6",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-11-23T20:39:34.226747Z",
-     "iopub.status.busy": "2024-11-23T20:39:34.226358Z",
-     "iopub.status.idle": "2024-11-23T20:39:34.289475Z",
-     "shell.execute_reply": "2024-11-23T20:39:34.288444Z"
+     "iopub.execute_input": "2024-11-23T20:41:15.744845Z",
+     "iopub.status.busy": "2024-11-23T20:41:15.744025Z",
+     "iopub.status.idle": "2024-11-23T20:41:15.804003Z",
+     "shell.execute_reply": "2024-11-23T20:41:15.803127Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.071133,
-     "end_time": "2024-11-23T20:39:34.291649",
+     "duration": 0.067556,
+     "end_time": "2024-11-23T20:41:15.806181",
      "exception": false,
-     "start_time": "2024-11-23T20:39:34.220516",
+     "start_time": "2024-11-23T20:41:15.738625",
      "status": "completed"
     },
     "tags": []
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e92320e2",
+   "id": "77fc037c",
    "metadata": {
     "_cell_guid": "a5a8bc4b-0b31-4486-a6f2-540e50ec3839",
     "_uuid": "97c4ed8d-024e-4dcc-b53c-462f3b017bda",
@@ -650,10 +650,10 @@
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.005558,
-     "end_time": "2024-11-23T20:39:34.302129",
+     "duration": 0.005421,
+     "end_time": "2024-11-23T20:41:15.816709",
      "exception": false,
-     "start_time": "2024-11-23T20:39:34.296571",
+     "start_time": "2024-11-23T20:41:15.811288",
      "status": "completed"
     },
     "tags": []
@@ -677,25 +677,25 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "19ef1520",
+   "id": "07b72297",
    "metadata": {
     "_cell_guid": "9b3b6f8c-f148-4b2c-963e-3ddb7f6d9566",
     "_uuid": "9ffdae55-4854-49fa-aa5d-8785aa1b9e30",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-11-23T20:39:34.313619Z",
-     "iopub.status.busy": "2024-11-23T20:39:34.313133Z",
-     "iopub.status.idle": "2024-11-23T20:39:34.868250Z",
-     "shell.execute_reply": "2024-11-23T20:39:34.867115Z"
+     "iopub.execute_input": "2024-11-23T20:41:15.827337Z",
+     "iopub.status.busy": "2024-11-23T20:41:15.826965Z",
+     "iopub.status.idle": "2024-11-23T20:41:16.441338Z",
+     "shell.execute_reply": "2024-11-23T20:41:16.440290Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.563656,
-     "end_time": "2024-11-23T20:39:34.870632",
+     "duration": 0.623105,
+     "end_time": "2024-11-23T20:41:16.444427",
      "exception": false,
-     "start_time": "2024-11-23T20:39:34.306976",
+     "start_time": "2024-11-23T20:41:15.821322",
      "status": "completed"
     },
     "tags": []
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17b74e9a",
+   "id": "75303f22",
    "metadata": {
     "_cell_guid": "4157566f-aa1f-421d-a621-44148bf63c61",
     "_uuid": "4b69d837-f70d-4932-9f81-b473560a04a2",
@@ -793,10 +793,10 @@
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.005998,
-     "end_time": "2024-11-23T20:39:34.882518",
+     "duration": 0.005516,
+     "end_time": "2024-11-23T20:41:16.458276",
      "exception": false,
-     "start_time": "2024-11-23T20:39:34.876520",
+     "start_time": "2024-11-23T20:41:16.452760",
      "status": "completed"
     },
     "tags": []
@@ -819,25 +819,25 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7a313d8b",
+   "id": "6c2729b6",
    "metadata": {
     "_cell_guid": "fc19de06-7b5b-4440-a292-f3555149265f",
     "_uuid": "a47def71-e126-4017-9893-defa475863ee",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-11-23T20:39:34.898688Z",
-     "iopub.status.busy": "2024-11-23T20:39:34.898234Z",
-     "iopub.status.idle": "2024-11-23T20:39:35.180659Z",
-     "shell.execute_reply": "2024-11-23T20:39:35.179698Z"
+     "iopub.execute_input": "2024-11-23T20:41:16.471524Z",
+     "iopub.status.busy": "2024-11-23T20:41:16.470756Z",
+     "iopub.status.idle": "2024-11-23T20:41:16.804297Z",
+     "shell.execute_reply": "2024-11-23T20:41:16.803182Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.294363,
-     "end_time": "2024-11-23T20:39:35.183247",
+     "duration": 0.343112,
+     "end_time": "2024-11-23T20:41:16.806960",
      "exception": false,
-     "start_time": "2024-11-23T20:39:34.888884",
+     "start_time": "2024-11-23T20:41:16.463848",
      "status": "completed"
     },
     "tags": []
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69e4cfb4",
+   "id": "cc066134",
    "metadata": {
     "_cell_guid": "90514429-5f31-4761-a35d-7f957bf701df",
     "_uuid": "4f584e41-2da4-43a4-9c57-2192fc6a0ec6",
@@ -938,10 +938,10 @@
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.006798,
-     "end_time": "2024-11-23T20:39:35.196931",
+     "duration": 0.011805,
+     "end_time": "2024-11-23T20:41:16.831334",
      "exception": false,
-     "start_time": "2024-11-23T20:39:35.190133",
+     "start_time": "2024-11-23T20:41:16.819529",
      "status": "completed"
     },
     "tags": []
@@ -962,25 +962,25 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "222677ca",
+   "id": "9d0bc5ec",
    "metadata": {
     "_cell_guid": "82b0b4bf-bce0-4809-a015-60eb9314fe68",
     "_uuid": "6d8d806f-ff29-4340-ac05-77ccfcf38407",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-11-23T20:39:35.212466Z",
-     "iopub.status.busy": "2024-11-23T20:39:35.212037Z",
-     "iopub.status.idle": "2024-11-23T20:39:36.708569Z",
-     "shell.execute_reply": "2024-11-23T20:39:36.707204Z"
+     "iopub.execute_input": "2024-11-23T20:41:16.851986Z",
+     "iopub.status.busy": "2024-11-23T20:41:16.851035Z",
+     "iopub.status.idle": "2024-11-23T20:41:18.388394Z",
+     "shell.execute_reply": "2024-11-23T20:41:18.387286Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 1.509524,
-     "end_time": "2024-11-23T20:39:36.713281",
+     "duration": 1.549074,
+     "end_time": "2024-11-23T20:41:18.392139",
      "exception": false,
-     "start_time": "2024-11-23T20:39:35.203757",
+     "start_time": "2024-11-23T20:41:16.843065",
      "status": "completed"
     },
     "tags": []
@@ -1049,7 +1049,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf9f8558",
+   "id": "0261b1a7",
    "metadata": {
     "_cell_guid": "f655f810-5ef9-497b-8e58-8aad8153f8c5",
     "_uuid": "f8568075-270b-4d81-a785-1e3e06d94121",
@@ -1058,10 +1058,10 @@
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.010769,
-     "end_time": "2024-11-23T20:39:36.736510",
+     "duration": 0.009486,
+     "end_time": "2024-11-23T20:41:18.412390",
      "exception": false,
-     "start_time": "2024-11-23T20:39:36.725741",
+     "start_time": "2024-11-23T20:41:18.402904",
      "status": "completed"
     },
     "tags": []
@@ -1074,25 +1074,25 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "aabbd51f",
+   "id": "2652a2f3",
    "metadata": {
     "_cell_guid": "53613be7-537a-4249-9391-ce2c691aae42",
     "_uuid": "576e5464-0ebe-49ff-96be-da4836db216c",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2024-11-23T20:39:36.759300Z",
-     "iopub.status.busy": "2024-11-23T20:39:36.758911Z",
-     "iopub.status.idle": "2024-11-23T20:39:37.000831Z",
-     "shell.execute_reply": "2024-11-23T20:39:36.999453Z"
+     "iopub.execute_input": "2024-11-23T20:41:18.433869Z",
+     "iopub.status.busy": "2024-11-23T20:41:18.433093Z",
+     "iopub.status.idle": "2024-11-23T20:41:18.591024Z",
+     "shell.execute_reply": "2024-11-23T20:41:18.590039Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.256947,
-     "end_time": "2024-11-23T20:39:37.004110",
+     "duration": 0.171268,
+     "end_time": "2024-11-23T20:41:18.593369",
      "exception": false,
-     "start_time": "2024-11-23T20:39:36.747163",
+     "start_time": "2024-11-23T20:41:18.422101",
      "status": "completed"
     },
     "tags": []
@@ -1130,20 +1130,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "784f3e5f",
+   "id": "8e3e2c03",
    "metadata": {
     "_cell_guid": "32fce25b-8ff9-48cc-afbd-d2a6505e65cf",
     "_uuid": "e82cef83-ba5f-4cf3-bffd-fb13618e4409",
     "collapsed": false,
-    "jp-MarkdownHeadingCollapsed": true,
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.014177,
-     "end_time": "2024-11-23T20:39:37.032186",
+     "duration": 0.010324,
+     "end_time": "2024-11-23T20:41:18.614315",
      "exception": false,
-     "start_time": "2024-11-23T20:39:37.018009",
+     "start_time": "2024-11-23T20:41:18.603991",
      "status": "completed"
     },
     "tags": []
@@ -1165,6 +1164,35 @@
     "A next step could be feature importance analysis, which would help identify the most influential factors in loan approval to aid decision-makers in a practical set-up. To improve the overall performance of the DT model, however, parameter tuning could be carried out by experimenting with different values of max_depth, min_samples_split, and min_samples_leaf for refining the tree structure, balance accuracy, and reduce overfitting.\n",
     "\n",
     "Overall, the authors agree that much larger datasets would need to be processed in order to improve the quality of the algoritms applied; however, the project has provided a clear appreciation of the potential of programming ML algorithms for real-world applications."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a23f9849",
+   "metadata": {
+    "papermill": {
+     "duration": 0.010566,
+     "end_time": "2024-11-23T20:41:18.635305",
+     "exception": false,
+     "start_time": "2024-11-23T20:41:18.624739",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Connect with Me\n",
+    "\n",
+    "<!-- Kaggle Profile -->\n",
+    "<a href=\"https://www.kaggle.com/Kaasie1234\" target=\"_blank\" style=\"text-decoration: none;\">\n",
+    "  <img src=\"https://cdn.iconscout.com/icon/free/png-256/kaggle-3628733-3030170.png\" alt=\"Kaggle Profile\" width=\"50\" style=\"border: none;\"/>\n",
+    "  <span style=\"color: #1f77b4; font-size: 18px; vertical-align: middle;\">Kaggle Profile</span>\n",
+    "</a>\n",
+    "\n",
+    "<!-- GitHub Profile -->\n",
+    "<a href=\"https://github.com/sakie123\" target=\"_blank\" style=\"text-decoration: none; margin-left: 20px;\">\n",
+    "  <img src=\"https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png\" alt=\"GitHub Profile\" width=\"50\" style=\"border: none;\"/>\n",
+    "  <span style=\"color: #1f77b4; font-size: 18px; vertical-align: middle;\">GitHub Profile</span>\n",
+    "</a>"
    ]
   }
  ],
@@ -1208,14 +1236,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 9.833265,
-   "end_time": "2024-11-23T20:39:37.775387",
+   "duration": 9.415604,
+   "end_time": "2024-11-23T20:41:19.266186",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2024-11-23T20:39:27.942122",
+   "start_time": "2024-11-23T20:41:09.850582",
    "version": "2.6.0"
   }
  },
